--- a/app/views/funcionarios/index.html.erb
+++ b/app/views/funcionarios/index.html.erb
@@ -1,17 +1,17 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listar Funcionarios</h1>
+<h1>Funcionarios</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Nome</th>
-      <th>Matricula</th>
-      <th>Nascimento</th>
-      <th>Endereço</th>
-      <th>Admissao</th>
-      <th>Usuario</th>
-      <th>Funçao</th>
+      <th>Nome &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th>Matricula &nbsp;&nbsp;</th>
+      <th>Nascimento &nbsp;&nbsp;</th>
+      <th>Endereço &nbsp;&nbsp;</th>
+      <th>Admissao &nbsp;&nbsp;</th>
+      <th>Usuario &nbsp;&nbsp;</th>
+      <th>Funçao &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -26,8 +26,8 @@
         <td><%= funcionario.admissao %></td>
         <td><%= funcionario.user.email %></td>
         <td><%= funcionario.funcao.cargo %></td>
-        <td><%= link_to 'Listar', funcionario %></td>
-        <td><%= link_to 'Editar', edit_funcionario_path(funcionario) %></td>
+        <td><%= link_to 'Mostrar |', funcionario %></td>
+        <td><%= link_to 'Editar |', edit_funcionario_path(funcionario) %></td>
         <td><%= link_to 'Apagar', funcionario, method: :delete, data: { confirm: 'Voce tem certeza?' } %></td>
       </tr>
     <% end %>
