--- a/app/views/funcaos/edit.html.erb
+++ b/app/views/funcaos/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Funcao</h1>
+<h1>Editar Funçao</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @funcao %> |
-<%= link_to 'Back', funcaos_path %>
+<%= link_to 'Listar', @funcao %> |
+<%= link_to 'Voltar', funcaos_path %>
