--- a/app/views/funcaos/show.html.erb
+++ b/app/views/funcaos/show.html.erb
@@ -5,5 +5,5 @@
   <%= @funcao.cargo %>
 </p>
 
-<%= link_to 'Edit', edit_funcao_path(@funcao) %> |
-<%= link_to 'Back', funcaos_path %>
+<%= link_to 'Editar', edit_funcao_path(@funcao) %> |
+<%= link_to 'Voltar', funcaos_path %>
