--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <a class="brand" href="/alunos">Alunos</a>
       <a class="brand" href="/funcionarios">Funcionarios</a>
       <a class="brand" href="/cursos">Cursos</a>
+      <a class="brand" href="/disciplinas">Disciplinas</a>
       <p class="navbar-text pull-right">
         <% if user_signed_in? %>
           Logado com: <strong><%= current_user.email %></strong>.
