--- a/app/views/funcaos/index.html.erb
+++ b/app/views/funcaos/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>:: Funçoes ::</h1>
+<h1>:: Funções ::</h1>
 
 <table>
   <thead>
@@ -16,7 +16,7 @@
         <td><%= funcao.cargo %></td>
         <td><%= link_to 'Mostrar |', funcao %></td>
         <td><%= link_to 'Editar |', edit_funcao_path(funcao) %></td>
-        <td><%= link_to 'Apagar', funcao, method: :delete, data: { confirm: 'Voce tem certeza?' } %></td>
+        <td><%= link_to 'Apagar', funcao, method: :delete, data: { confirm: 'Você tem certeza?' } %></td>
       </tr>
     <% end %>
   </tbody>
