--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
     <div class="container">
       <a class="brand" href="/users/sign_in">Portal</a>
       <a class="brand" href="/alunos">Alunos</a>
-      <a class="brand" href="/funcaos">Funçaos</a>
-      <a class="brand" href="/funcionarios">Funcionarios</a>
+      <a class="brand" href="/funcaos">Funções</a>
+      <a class="brand" href="/funcionarios">Funcionários</a>
       <a class="brand" href="/cursos">Cursos</a>
       <a class="brand" href="/disciplinas">Disciplinas</a>
       <a class="brand" href="/turmas">Turmas</a>
