--- a/app/views/alunos/index.html.erb
+++ b/app/views/alunos/index.html.erb
@@ -1,16 +1,20 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Alunos</h1>
+<h1>Relação de Alunos</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Nome &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th>Nome &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
       <th>Matricula &nbsp;&nbsp;</th>
-      <th>Nascimento &nbsp;&nbsp;</th>
-      <th>Endereço &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Data cadastro &nbsp;&nbsp;</th>
-      <th>Email &nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th>Sexo &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th>Data Nascimento &nbsp;</th>
+      <th>Endereço &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th>Cpf &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th>Rg &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th>User &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th>Disciplinas &nbsp;&nbsp;&nbsp;</th>
+      <th>Status &nbsp;&nbsp;</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,16 +24,19 @@
       <tr>
         <td><%= aluno.nome %></td>
         <td><%= aluno.matricula %></td>
-        <td><%= aluno.nascimento %></td>
+        <td><%= aluno.sexo %></td>
+        <td><%= aluno.data_nascimento %></td>
         <td><%= aluno.endereco %></td>
-        <td><%= aluno.data_cadast %></td>
+        <td><%= aluno.cpf %></td>
+        <td><%= aluno.rg %></td>
         <td><%= aluno.user.email %></td>
+        <td><%= aluno.status %></td>
+        <td><%= aluno.disciplinas_nome %></td>
         <td><%= link_to 'Mostrar |', aluno %></td>
         <td><%= link_to 'Editar |', edit_aluno_path(aluno) %></td>
-        <td><%= link_to 'Apagar', aluno, method: :delete, data: { confirm: 'Voce tem certeza?' } %></td>
+        <td><%= link_to 'Apagar', aluno, method: :delete, data: { confirm: 'Você tem certeza?' } %></td>
       </tr>
     <% end %>
-    <%= paginate @alunos %>
   </tbody>
 </table>
 
