--- a/app/views/cursos/_form.html.erb
+++ b/app/views/cursos/_form.html.erb
@@ -12,19 +12,19 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :nome %><br>
+    <%= f.label :nome, "Nome" %><br>
     <%= f.text_field :nome %>
   </div>
   <div class="field">
-    <%= f.label :codigo %><br>
+    <%= f.label :codigo, "Código" %><br>
     <%= f.text_field :codigo %>
   </div>
   <div class="field">
-    <%= f.label :duracao %><br>
+    <%= f.label :duracao, "Duração" %><br>
     <%= f.text_field :duracao %>
   </div>
   <div class="field">
-    <%= f.label :tipo %><br>
+    <%= f.label :tipo, "Tipo" %><br>
     <%= f.text_field :tipo %>
   </div>
   <div class="actions">
