--- a/app/views/disciplinas/_form.html.erb
+++ b/app/views/disciplinas/_form.html.erb
@@ -12,24 +12,32 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :nome %><br>
+    <%= f.label :nome, "Nome" %><br>
     <%= f.text_field :nome %>
   </div>
   <div class="field">
-    <%= f.label :codigo %><br>
-    <%= f.number_field :codigo %>
+    <%= f.label :codigo, "Código" %><br>
+    <%= f.text_field :codigo %>
   </div>
   <div class="field">
-    <%= f.label :curso_id %><br>
+    <%= f.label :curso_id, "Curso" %><br>
     <%= f.collection_select :curso_id, Curso.all, :id, :nome %>
   </div>
   <div class="field">
-    <%= f.label :funcao_id %><br>
+    <%= f.label :funcao_id, "Cargo" %><br>
     <%= f.collection_select :funcao_id, Funcao.all, :id, :cargo %>
   </div>
   <div class="field">
-    <%= f.label :funcionario_id %><br>
+    <%= f.label :funcionario_id, "Funcionário" %><br>
     <%= f.collection_select :funcionario_id, Funcionario.all, :id, :nome %>
+  </div>
+  <div class="field">
+    <%= f.label :aluno_id, "Aluno" %><br>
+    <%= f.collection_select :aluno_id, Aluno.all, :id, :nome, prompt: "Selecione" %>
+  </div>
+  <div class="field">
+    <%= f.label :aluno_id, "Aluno" %><br>
+    <%= f.collection_select :aluno_id, Aluno.all, :id, :nome, prompt: "Selecione" %>
   </div>
   <div class="actions">
     <%= f.submit %>
