--- a/app/views/funcaos/new.html.erb
+++ b/app/views/funcaos/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Funcao</h1>
+<h1>Nova Função</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', funcaos_path %>
+<%= link_to 'Voltar', funcaos_path %>
