--- a/app/views/funcionarios/index.html.erb
+++ b/app/views/funcionarios/index.html.erb
@@ -5,13 +5,17 @@
 <table>
   <thead>
     <tr>
-      <th>Nome &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th>Nome &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
       <th>Matricula &nbsp;&nbsp;</th>
-      <th>Nascimento &nbsp;&nbsp;</th>
+      <th>Nascimento &nbsp;</th>
       <th>Endereço &nbsp;&nbsp;</th>
-      <th>Admissao &nbsp;&nbsp;</th>
-      <th>Usuario &nbsp;&nbsp;</th>
-      <th>Funçao &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th>Admissão &nbsp;&nbsp;</th>
+      <th>Usuário &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th>Função &nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th>Sexo &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th>CPF &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th>RG &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th>Status &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -26,9 +30,13 @@
         <td><%= funcionario.admissao %></td>
         <td><%= funcionario.user.email %></td>
         <td><%= funcionario.funcao.cargo %></td>
+        <td><%= funcionario.sexo %></td>
+        <td><%= funcionario.cpf %></td>
+        <td><%= funcionario.rg %></td>
+        <td><%= funcionario.status %></td>
         <td><%= link_to 'Mostrar |', funcionario %></td>
         <td><%= link_to 'Editar |', edit_funcionario_path(funcionario) %></td>
-        <td><%= link_to 'Apagar', funcionario, method: :delete, data: { confirm: 'Voce tem certeza?' } %></td>
+        <td><%= link_to 'Apagar', funcionario, method: :delete, data: { confirm: 'Você tem certeza?' } %></td>
       </tr>
     <% end %>
     <%= paginate @funcionarios %>
