--- a/app/views/turmas/index.html.erb
+++ b/app/views/turmas/index.html.erb
@@ -5,12 +5,12 @@
 <table>
   <thead>
     <tr>
-      <th>Codigo &nbsp;&nbsp;</th>
-      <th>Turno &nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Semestre &nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Disciplina &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Capacidade &nbsp;&nbsp;</th>
-      <th>Alunos &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
+      <th>Código</th>
+      <th>Turno</th>
+      <th>Semestre</th>
+      <th>Capacidade</th>
+      <th>Funcionário</th>
+      <th>Disciplina</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -21,12 +21,12 @@
         <td><%= turma.codigo %></td>
         <td><%= turma.turno %></td>
         <td><%= turma.semestre %></td>
-        <td><%= turma.disciplina.nome %></td>
         <td><%= turma.capacidade %></td>
-        <td><%= turma.alunos_id %></td>
+        <td><%= turma.funcionario.nome %></td>
+        <td><%= turma.disciplina.nome %></td>
         <td><%= link_to 'Mostrar |', turma %></td>
         <td><%= link_to 'Editar |', edit_turma_path(turma) %></td>
-        <td><%= link_to 'Apagar', turma, method: :delete, data: { confirm: 'Voce tem certeza?' } %></td>
+        <td><%= link_to 'Apagar', turma, method: :delete, data: { confirm: 'Você tem certeza?' } %></td>
       </tr>
     <% end %>
   </tbody>
