--- a/app/views/funcionarios/_form.html.erb
+++ b/app/views/funcionarios/_form.html.erb
@@ -20,7 +20,7 @@
     <%= f.text_field :matricula %>
   </div>
   <div class="field">
-    <%= f.label :Nascimento %><br>
+    <%= f.label :nascimento, "Nascimento" %><br>
     <%= f.date_select :nascimento, :start_year => 1950, :order => [:day, :month, :year] %>
   </div>
   <div class="field">
