--- a/app/views/disciplinas/index.html.erb
+++ b/app/views/disciplinas/index.html.erb
@@ -2,34 +2,12 @@
 
 <h1>Disciplinas</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Nome &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Código &nbsp;&nbsp;</th>
-      <th>Curso &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Funcionário &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Função &nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<% if policy(@disciplinas).index? %>
 
-  <tbody>
-    <% @disciplinas.each do |disciplina| %>
-      <tr>
-        <td><%= disciplina.nome %></td>
-        <td><%= disciplina.codigo %></td>
-        <td><%= disciplina.curso.nome %></td>
-        <td><%= disciplina.funcionario.nome %></td>
-        <td><%= disciplina.funcao.cargo %></td>
-        <td><%= link_to 'Mostrar |', disciplina %></td>
-        <td><%= link_to 'Editar |', edit_disciplina_path(disciplina) %></td>
-        <td><%= link_to 'Apagar', disciplina, method: :delete, data: { confirm: 'Você tem certeza?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render partial: "admin_index" %>
 
-<br>
+<% else %>
 
-<%= link_to 'Nova Disciplina', new_disciplina_path %>
+<%= render partial: "users_index" %>
+
+<% end %>
