--- a/app/views/funcaos/index.html.erb
+++ b/app/views/funcaos/index.html.erb
@@ -1,27 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <h1>:: Funções ::</h1>
+<% if policy(@funcaos).index? %>
+<%= render partial: "admin_index" %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Cargo</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<% else %>
 
-  <tbody>
-    <% @funcaos.each do |funcao| %>
-      <tr>
-        <td><%= funcao.cargo %></td>
-        <td><%= link_to 'Mostrar |', funcao %></td>
-        <td><%= link_to 'Editar |', edit_funcao_path(funcao) %></td>
-        <td><%= link_to 'Apagar', funcao, method: :delete, data: { confirm: 'Você tem certeza?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render partial: "users_index" %>
 
-<br>
-
-<%= link_to 'Novo Funçao', new_funcao_path %>
+<% end %>
