--- a/app/views/funcionarios/index.html.erb
+++ b/app/views/funcionarios/index.html.erb
@@ -1,48 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Funcionarios</h1>
+<% if policy(@funcionarios).index? %>
+<%= render partial: "admin_index" %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Nome &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Matricula &nbsp;&nbsp;</th>
-      <th>Nascimento &nbsp;</th>
-      <th>Endereço &nbsp;&nbsp;</th>
-      <th>Admissão &nbsp;&nbsp;</th>
-      <th>Usuário &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Função &nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Sexo &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>CPF &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>RG &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th>Status &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<% else %>
 
-  <tbody>
-    <% @funcionarios.each do |funcionario| %>
-      <tr>
-        <td><%= funcionario.nome %></td>
-        <td><%= funcionario.matricula %></td>
-        <td><%= funcionario.nascimento %></td>
-        <td><%= funcionario.endereco %></td>
-        <td><%= funcionario.admissao %></td>
-        <td><%= funcionario.user.email %></td>
-        <td><%= funcionario.funcao.cargo %></td>
-        <td><%= funcionario.sexo %></td>
-        <td><%= funcionario.cpf %></td>
-        <td><%= funcionario.rg %></td>
-        <td><%= funcionario.status %></td>
-        <td><%= link_to 'Mostrar |', funcionario %></td>
-        <td><%= link_to 'Editar |', edit_funcionario_path(funcionario) %></td>
-        <td><%= link_to 'Apagar', funcionario, method: :delete, data: { confirm: 'Você tem certeza?' } %></td>
-      </tr>
-    <% end %>
-    <%= paginate @funcionarios %>
-  </tbody>
-</table>
+<%= render partial: "users_index" %>
 
-<br>
-
-<%= link_to 'Novo Funcionario', new_funcionario_path %>
+<% end %>
